# FEBioStudio

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  FindDependencies.cmake  LICENSE  README.md  docker-compose.yml  febiostudio.qrc  set_icon.cmake
Abaqus/: AbaqusExport.cpp  AbaqusExport.h  AbaqusImport.cpp  AbaqusImport.h  AbaqusModel.cpp  AbaqusModel.h  ModelBuilder.cpp  ModelBuilder.h
Ansys/: AnsysImport.cpp  AnsysImport.h
CUILib/: CUILib.pro  GLSceneView.cpp  GLSceneView.h  GraphData.h  Histogram.cpp  HistogramViewer.cpp  HistogramViewer.h  ImageViewer.cpp  ImageViewer.h  InputWidgets.cpp  InputWidgets.h  PlotWidget.cpp  PlotWidget.h  moc_HistogramViewer.cpp  moc_ImageViewer.cpp  moc_predefs.h  stdafx.h
Comsol/: COMSOLImport.cpp  COMSOLImport.h
Documentation/: Copyright-FEBio-Studio.txt  Doxyfile  FEBioStudio.bib  FEBioStudioReleaseNotes.txt  FEBioStudio_1_0.lyx  FEBioStudio_EULA.txt  FEBioStudio_User_Manual.lyx  FEBioStudio_user_manual.lyx  Splash Screen.pptx  febioUMWebDefines.py  helpDiscrepancies.txt
FEBio/: FEBioException.h  FEBioExport.cpp  FEBioExport.h  FEBioExport12.cpp  FEBioExport12.h  FEBioExport2.cpp  FEBioExport2.h  FEBioExport25.cpp  FEBioExport25.h  FEBioExport3.cpp  FEBioExport3.h  FEBioExport4.cpp  FEBioExport4.h  FEBioFormat.cpp  FEBioFormat.h  FEBioFormat12.cpp  FEBioFormat12.h  FEBioFormat2.cpp  FEBioFormat2.h  FEBioFormat25.cpp  FEBioFormat25.h  FEBioFormat3.cpp  FEBioFormat3.h  FEBioFormat4.cpp  FEBioFormat4.h  FEBioFormatOld.cpp  FEBioFormatOld.h  FEBioImport.cpp  FEBioImport.h  FEBioInputModel.cpp  FEBioInputModel.h  FEBioModel.cpp  FEBioModel.h
FEBioApp/: ActionButton.h  FEBioApp.cpp  FEBioApp.h  FEBioAppDocument.cpp  FEBioAppDocument.h  FEBioAppScript.cpp  FEBioAppScript.h  FEBioAppUIBuilder.cpp  FEBioAppUIBuilder.h  FEBioAppView.cpp  FEBioAppView.h  FEBioAppWidget.cpp  FEBioAppWidget.h  GLFEBioScene.cpp  GLFEBioScene.h  JSAST.cpp  JSAST.h  JSInterpreter.cpp  JSInterpreter.h  JSObject.h  JSParser.cpp  JSParser.h  JSTokenizer.cpp  JSTokenizer.h  ScriptParser.cpp  ScriptParser.h
FEBioLink/: FEBioClass.cpp  FEBioClass.h  FEBioInit.cpp  FEBioInit.h  FEBioInterface.cpp  FEBioInterface.h  FEBioModule.cpp  FEBioModule.h
FEBioMonitor/: DlgMatrixInspector.cpp  DlgMatrixInspector.h  DlgMonitorSettings.cpp  DlgMonitorSettings.h  FEBioModelPanel.cpp  FEBioModelPanel.h  FEBioMonitorDoc.cpp  FEBioMonitorDoc.h  FEBioMonitorPanel.cpp  FEBioMonitorPanel.h  FEBioMonitorView.cpp  FEBioMonitorView.h  FEBioReportDoc.cpp  FEBioReportDoc.h  FEBioReportView.cpp  FEBioReportView.h  GLMonitorScene.cpp  GLMonitorScene.h
FEBioRun/: FEBioInit.cpp  FEBioInit.h  FEBioRun.cpp  FEBioRun.h
FEBioStudio/: 2DImageTimeView.cpp  2DImageTimeView.h  3PointAngleTool.cpp  3PointAngleTool.h  4PointAngleTool.cpp  4PointAngleTool.h  AVIAnimation.cpp  AVIAnimation.h  AddPointTool.cpp  AddPointTool.h  AlignMeshMOI.cpp  AlignMeshMOI.h  Animation.cpp  Animation.h  AreaCalculatorTool.cpp  AreaCalculatorTool.h  AreaCoverageTool.cpp  AreaCoverageTool.h  AverageNormalTool.cpp  AverageNormalTool.h  BatchConverter.cpp  BatchConverter.h  BuildPanel.cpp  BuildPanel.h  ButtonBox.cpp  ButtonBox.h  CColorButton.cpp  CColorButton.h  CDlgFiberViz.cpp  CIntInput.cpp  CIntInput.h  ClassDescriptor.cpp  ClassDescriptor.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  CommandPanel.cpp  CommandPanel.h  CommandProcessor.cpp  (+843 more)
FEMLib/: FEAnalysisStep.cpp  FEAnalysisStep.h  FEBase.h  FEBodyLoad.cpp  FEBodyLoad.h  FEBoundaryCondition.cpp  FEBoundaryCondition.h  FEComponent.cpp  FEComponent.h  FEConnector.cpp  FEConnector.h  FECoreMaterial.cpp  FECoreMaterial.h  FECoreModel.h  FEDOF.cpp  FEDOF.h  FEDataMap.cpp  FEDataMap.h  FEDataVariable.cpp  FEDataVariable.h  FEDiscreteMaterial.cpp  FEDiscreteMaterial.h  FEDomainComponent.cpp  FEDomainComponent.h  FEElementFormulation.cpp  FEElementFormulation.h  FEInitialCondition.cpp  FEInitialCondition.h  FEInterface.cpp  FEInterface.h  FELoad.cpp  FELoad.h  FELoadController.cpp  FELoadController.h  FEMKernel.cpp  FEMKernel.h  FEMaterial.cpp  FEMaterial.h  FEMaterialFactory.cpp  FEMaterialFactory.h  (+38 more)
FSCore/: Archive.cpp  Archive.h  BSpline.cpp  BSpline.h  CallTracer.cpp  CallTracer.h  ClassDescriptor.cpp  ClassDescriptor.h  ColorMap.cpp  ColorMap.h  ColorMapManager.cpp  ColorMapManager.h  FSCore.cpp  FSCore.h  FSCore.pro  FSDir.cpp  FSDir.h  FSLogger.cpp  FSLogger.h  FSObject.cpp  FSObject.h  FSObjectList.h  FSThreadedTask.cpp  FSThreadedTask.h  FileReader.cpp  FileReader.h  FileWriter.h  FunctionTimer.cpp  FunctionTimer.h  LoadCurve.cpp  LoadCurve.h  NestedArray.h  Object.cpp  Object.h  Palette.cpp  Palette.h  ParamBlock.cpp  ParamBlock.h  Serializable.cpp  Serializable.h  (+11 more)
GLLib/: ColorTexture.cpp  ColorTexture.h  GDecoration.cpp  GDecoration.h  GLCamera.cpp  GLCamera.h  GLContext.cpp  GLContext.h  GLGrid.cpp  GLGrid.h  GLLib.pro  GLMaterial.h  GLMath.cpp  GLMath.h  GLMesh.cpp  GLMesh.h  GLMeshBuilder.cpp  GLMeshBuilder.h  GLMeshRender.cpp  GLMeshRender.h  GLProgram.cpp  GLProgram.h  GLRenderEngine.cpp  GLRenderEngine.h  GLRenderStats.h  GLScene.cpp  GLScene.h  GLShader.cpp  GLShader.h  GLTexture1D.cpp  GLTexture1D.h  GLTexture2D.cpp  GLTexture2D.h  GLTexture3D.cpp  GLTexture3D.h  GLVAMesh.cpp  GLVAMesh.h  GLViewSettings.cpp  GLViewSettings.h  GView.cpp  (+9 more)
GLWLib/: GLCheckBox.cpp  GLCheckBox.h  GLComposite.cpp  GLComposite.h  GLLabel.h  (+15 more)
PyLib/: CMakeLists.txt  PyCallBack.cpp  PyCallBack.h  PyExceptions.h  PyFBS.cpp  PyFBS.h  PyFBSCore.cpp  PyFBSCore.h  PyFBSGeom.cpp  PyFBSGeom.h  PyFBSMesh.cpp  PyFBSModel.cpp  PyFBSModel.h  PyFBSPost.cpp  PyFBSPost.h  PyFBSUI.cpp  PyFBSUI.h  PyFSMesh.cpp  PyFSMesh.h  PyInputWidgets.cpp  PyInputWidgets.h  PyOutput.h  PyRunContext.cpp  PyRunContext.h  PySpringFunctions.cpp  PySpringFunctions.h  PyState.cpp  PyState.h  PyThread.cpp  PyThread.h  PythonInputHandler.cpp  PythonInputHandler.h  PythonRunner.cpp  PythonRunner.h  PythonThread.cpp  PythonThread.h  PythonTool.cpp  PythonTool.h  PythonToolsPanel.cpp  PythonToolsPanel.h  (+7 more)
PyLib/DocHeaders/: PyCoreDocs.h  PyGeomDocs.h  PyMeshDocs.h  PyModelDocs.h  PyPostDocs.h
(+1367 files in other folders)
